Fixed a couple of small bugs with the tooltips. They needed word wrapping and the page views one needed to show on the left.
git-svn-id: https://plugins.svn.wordpress.org/lbak-user-tracking/trunk@288070 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css_includes/admin_head.css
+++ b/css_includes/admin_head.css
@@ -74,6 +74,8 @@
     max-width: 300px;
     padding:12px;
     color:#fff;
+    z-index: 3;
+    word-wrap: break-word;
 }
 .lbakut_tooltip a {
     font-weight: bold;
